force-app/main/default/objects/Account/fields/Billing_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Billing_Latitude__c</fullName>
    <label>Billing Latitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>