force-app/main/default/objects/Account/fields/Failed_Previous_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Failed_Previous_Inspection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Failed Previous Inspection</label>
    <type>Checkbox</type>
</CustomField>