force-app/main/default/objects/Account/fields/Farm_Plot_Number__c.field-meta.xml
<CustomField>
    <fullName>Farm_Plot_Number__c</fullName>
    <label>Farm/Plot Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>