force-app/main/default/objects/Account/fields/Production_Submission_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Production_Submission_Frequency__c</fullName>
    <label>Production Submission Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Half Yearly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>