force-app/main/default/objects/Account/fields/Sale_of_Produce__c.field-meta.xml
<CustomField>
    <fullName>Sale_of_Produce__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Please select Yes if the hatchery has sold produce in the selected quarter</description>
    <inlineHelpText>Please select Yes if the hatchery has sold produce in the selected quarter</inlineHelpText>
    <label>Sale of Produce</label>
    <type>Checkbox</type>
</CustomField>