force-app/main/default/objects/Account/fields/Sales_Period__c.field-meta.xml
<CustomField>
    <fullName>Sales_Period__c</fullName>
    <label>Sales Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Jan-Mar 一月至三月</fullName>
            </value>
            <value>
                <fullName>Apr-Jun 四月至六月</fullName>
            </value>
            <value>
                <fullName>July-Sep 七月至九月</fullName>
            </value>
            <value>
                <fullName>Oct-Dec 十月至十二月</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>