force-app/main/default/objects/Account/fields/sfdo_grants__Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>sfdo_grants__Tax_ID__c</fullName>
    <description>The unique set of numbers assigned by the government to identify an organization for tax purposes.</description>
    <inlineHelpText>The unique set of numbers assigned by the government to identify an organization for tax purposes.</inlineHelpText>
    <label>Tax ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>