force-app/main/default/objects/Account/fields/Year_of_Sale__c.field-meta.xml
<CustomField>
    <fullName>Year_of_Sale__c</fullName>
    <label>Year of Sale</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>