force-app/main/default/objects/Account/recordTypes/Food_Business_Operator.recordType-meta.xml
<RecordType>
    <fullName>Food_Business_Operator</fullName>
    <active>true</active>
    <label>Food Business Operator</label>
</RecordType>