force-app/main/default/objects/Account/listViews/All_Organizations.listView-meta.xml
<ListView>
    <fullName>All_Organizations</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Rating_Indicator__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Organization</value>
    </filters>
    <label>All Organizations</label>
</ListView>